<resources>
    <string name="app_name">Qiuhao_Zheng_MyRuns5</string>
    <string name="action_settings">Settings</string>
    <string name="tab_layout_desc">Tab</string>
    <string name="profile_photo">Profile Photo:</string>
    <string name="image_button">Change</string>
    <string name="save_button">SAVE</string>
    <string name="cancel_button">CANCEL</string>
    <string name="person_name">Name</string>
    <string name="name_hint">Your Name</string>
    <string name="person_email">Email</string>
    <string name="email_hint">Your Email</string>
    <string name="person_phone">Phone</string>
    <string name="phone_hint">Your Phone Number</string>
    <string name="person_gender">Gender</string>
    <string name="female_gender">Female</string>
    <string name="male_gender">Male</string>
    <string name="person_class">Class</string>
    <string name="class_hint">eg. 2012</string>
    <string name="person_major">Major</string>
    <string name="major_hint">Your Major</string>
<!--    <string name="action_settings">Settings</string>-->
</resources>