<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    <!-- My Runs Toolbar -->
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        android:layout_marginTop="40dp"
        app:title="MyRuns2"/>
    <ScrollView
        android:id="@+id/scroll_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="5dp"
            android:focusableInTouchMode="true"
            android:fillViewport="true">

            <!-- Profile Photo -->
            <TextView
                android:id="@+id/profile_photo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:text="@string/profile_photo"
                android:textColor="@color/light_grey"
                android:textSize="15sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="6dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/image_view"
                    android:layout_width="150dp"
                    android:layout_height="120dp"

                    android:layout_marginStart="60dp" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="1px"
                    android:layout_weight="1" />

                <Button
                    android:id="@+id/change_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:layout_marginEnd="20dp"
                    android:background="@drawable/button_background"
                    android:text="@string/image_button"
                    android:textColor="#000000" />

            </LinearLayout>

            <!-- name -->
            <TextView
                android:id="@+id/name_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="0dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="0dp"
                android:text="@string/person_name"
                android:textColor="@color/light_grey"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/name_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="48dp"
                android:hint="@string/name_hint"
                android:inputType="text"
                android:autofillHints="name"
                android:layout_marginBottom="5dp" />

            <!-- email -->
            <TextView
                android:id="@+id/email_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="0dp"
                android:layout_marginTop="0dp"
                android:layout_marginBottom="0dp"
                android:text="@string/person_email"
                android:textColor="@color/light_grey"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/email_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="48dp"
                android:hint="@string/email_hint"
                android:autofillHints="emailAddress"
                android:inputType="textEmailAddress"
                android:layout_marginBottom="5dp" />

            <!-- phone -->
            <TextView
                android:id="@+id/phone_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="0dp"
                android:layout_marginTop="0dp"
                android:layout_marginBottom="0dp"
                android:text="@string/person_phone"
                android:textColor="@color/light_grey"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/phone_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="48dp"
                android:hint="@string/phone_hint"
                android:inputType="phone"
                android:autofillHints="phone"
                android:layout_marginBottom="5dp" />

            <!-- gender -->
            <TextView
                android:id="@+id/gender_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="0dp"
                android:layout_marginTop="0dp"
                android:layout_marginBottom="0dp"
                android:text="@string/person_gender"
                android:textColor="@color/light_grey"
                android:textSize="15sp" />

            <RadioGroup
                android:id="@+id/gender_radio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:textSize="16sp"
                android:layout_marginBottom="1dp">

                <RadioButton
                    android:id="@+id/female_radio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:minHeight="48dp"
                    android:text="@string/female_gender"
                    android:textSize="15sp"
                    android:layout_marginEnd="16dp"/>

                <RadioButton
                    android:id="@+id/male_radio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:minHeight="48dp"
                    android:text="@string/male_gender"
                    android:textSize="15sp"/>
            </RadioGroup>

            <!-- Class -->
            <TextView
                android:id="@+id/class_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="0dp"
                android:layout_marginTop="0dp"
                android:layout_marginBottom="0dp"
                android:text="@string/person_class"
                android:textColor="@color/light_grey"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/class_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="48dp"
                android:hint="@string/class_hint"
                android:inputType="number"
                android:autofillHints="class"
                android:layout_marginBottom="5dp" />

            <!-- Major -->
            <TextView
                android:id="@+id/major_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="0dp"
                android:layout_marginTop="0dp"
                android:layout_marginBottom="0dp"
                android:text="@string/person_major"
                android:textColor="@color/light_grey"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/major_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="48dp"
                android:hint="@string/major_hint"
                android:inputType="text"
                android:autofillHints="major"
                android:layout_marginBottom="5dp" />

            <!-- Save and Cancel Button -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <View
                    android:layout_width="0dp"
                    android:layout_height="1px"
                    android:layout_weight="1" />

                <Button
                    android:id="@+id/save_button"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:background="@drawable/button_background"
                    android:text="@string/save_button"
                    android:textColor="#000000"
                    android:layout_marginEnd="0dp"/>
                <View
                    android:layout_width="0dp"
                    android:layout_height="1px"
                    android:layout_weight="1" />

                <Button
                    android:id="@+id/cancel_button"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:background="@drawable/button_background"
                    android:text="@string/cancel_button"
                    android:textColor="#000000" />
                <View
                    android:layout_width="0dp"
                    android:layout_height="1px"
                    android:layout_weight="1" />

            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</LinearLayout>